# switchfin

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: build.yaml  macos-dylib.yaml  mingw-packages.yaml  switch-portlibs.yaml  switchroot-ubuntu.yaml  ubuntu-deps.yaml
app/: app.manifest  app.plist.in  app_win32.rc  app_win32.rc.in
app/include/activity/: hint_activity.hpp  main_activity.hpp  player_view.hpp  server_list.hpp
app/include/api/: analytics.hpp  http.hpp  jellyfin.hpp
app/include/client/: avio.hpp  client.hpp  local.hpp  webdav.hpp
app/include/tab/: home_tab.hpp  library_view.hpp  live_tv.hpp  media_collection.hpp  media_folder.hpp  media_series.hpp  music_album.hpp  playlist.hpp  remote_tab.hpp  remote_view.hpp  search_result.hpp  search_tab.hpp  server_add.hpp  server_login.hpp  setting_tab.hpp
app/include/utils/: config.hpp  dialog.hpp  event.hpp  gesture.hpp  image.hpp  misc.hpp  overclock.hpp  thread.hpp
app/include/view/: auto_tab_frame.hpp  custom_button.hpp  danmaku_core.hpp  danmaku_setting.hpp  gallery_view.hpp  h_recycling.hpp  media_filter.hpp  mpv_core.hpp  music_view.hpp  player_setting.hpp  presenter.h  presenter.hpp  recycling_grid.hpp  search_list.hpp  selector_cell.hpp  setting_about.hpp  suggest_list.hpp  svg_image.hpp  text_box.hpp  video_card.hpp  video_profile.hpp  video_progress_slider.hpp  video_source.hpp  video_view.hpp
app/src/: main.cpp
app/src/activity/: hint_activity.cpp  main_activity.cpp  player_view.cpp  server_list.cpp
app/src/api/: analytics.cpp  http.cpp  jellyfin.cpp
app/src/client/: avio.cpp  client.cpp  local.cpp  webdav.cpp
app/src/tab/: home_tab.cpp  library_view.cpp  live_tv.cpp  media_collection.cpp  media_folder.cpp  media_series.cpp  music_album.cpp  playlist.cpp  remote_tab.cpp  remote_view.cpp  search_result.cpp  search_tab.cpp  server_add.cpp  server_login.cpp  setting_tab.cpp
app/src/utils/: config.cpp  dialog.cpp  gesture.cpp  image.cpp  misc.cpp  overclock.cpp  thread.cpp  version.cpp
app/src/view/: auto_tab_frame.cpp  button_close.cpp  custom_button.cpp  danmaku_core.cpp  danmaku_setting.cpp  gallery_view.cpp  h_recycling.cpp  media_filter.cpp  mpv_core.cpp  music_view.cpp  player_setting.cpp  presenter.cpp  recycling_grid.cpp  search_list.cpp  selector_cell.cpp  setting_about.cpp  suggest_list.cpp  svg_image.cpp  text_box.cpp  video_profile.cpp  video_progress_slider.cpp  video_source.cpp  video_view.cpp
cmake/: FindMPV.cmake  deps.cmake
debian/: Dockerfile  changelog  control  rules
debian/source/: options
resources/i18n/cs/: hints.json  main.json
resources/i18n/de/: hints.json  main.json
resources/i18n/en-US/: hints.json  main.json
resources/i18n/uk-UA/: hints.json  main.json
resources/i18n/zh-Hans/: hints.json  main.json
resources/i18n/zh-Hant/: hints.json  main.json
resources/xml/activity/: hint.xml  main.xml  server_list.xml
resources/xml/cell/: server.xml
resources/xml/tabs/: collection.xml  home.xml  library_view.xml  media_folder.xml  music_album.xml  remote.xml  remote_view.xml  search_result.xml  search_tv.xml  series.xml  server_add.xml  server_login.xml  settings.xml
resources/xml/view/: button_close.xml  danmaku_setting.xml  dir_entry.xml  episode_card.xml  media_filter.xml  music_track.xml  music_view.xml  player_setting.xml  playlist_item.xml  quick_connect.xml  search_card.xml  search_list.xml  server_item.xml  setting_about.xml  suggest_card.xml  suggest_list.xml  tutorial_error.xml  tutorial_font.xml  user_item.xml  video_card.xml  video_profile.xml  video_resume.xml  video_view.xml
scripts/: README.md  flatpak.yaml  org.player.switchfin.appdata.xml  org.player.switchfin.desktop  switchfin.appdata.xml  switchfin.desktop
scripts/aur/: PKGBUILD  entrypoint.sh
scripts/deb/debian-bookworm/: Dockerfile  build.sh  control
scripts/deb/kylin-v10/: Dockerfile  build.sh  control  deps.sh
scripts/deb/switchroot-bionic/: Dockerfile  build.sh  control  deps.sh
scripts/deb/ubuntu-focal/: Dockerfile  build.sh  control  deps.sh
scripts/forwarder/: CMakeLists.txt  README.md  config.json
scripts/forwarder/source/: main.c
scripts/l4t/: Dockerfile  build_deps.sh  build_l4t.sh
scripts/l4t/DEBIAN/: control
scripts/macos/: macos_arm64.txt  mpv.patch
scripts/mingw64/curl/: 0001-skip-compiling-unnecessary-stuff.patch  0004-more-static-fixes.patch  PKGBUILD
scripts/mingw64/dav1d/: PKGBUILD
scripts/mingw64/ffmpeg/: PKGBUILD
scripts/mingw64/freetype/: PKGBUILD
scripts/mingw64/glfw/: 0001-ime-support.patch  PKGBUILD
scripts/mingw64/harfbuzz/: PKGBUILD
scripts/mingw64/libass/: PKGBUILD
scripts/mingw64/libplacebo/: PKGBUILD
scripts/mingw64/libwebp/: PKGBUILD
scripts/mingw64/mbedtls/: 0001-support-cpuid-for-win32.patch  PKGBUILD
scripts/mingw64/mpv/: 0001-d3d11-render.patch  PKGBUILD
scripts/mingw64/mpv-opengl/: PKGBUILD
scripts/mingw64/shaderc/: 0001-fix-glslang-hlsl-linking-order.patch  PKGBUILD
scripts/mingw64/spirv-cross/: PKGBUILD
scripts/snap/: snapcraft.yaml
scripts/snap/curl/: PKGBUILD
scripts/snap/ffmpeg/: PKGBUILD
scripts/snap/freetype/: PKGBUILD
scripts/snap/harfbuzz/: PKGBUILD
scripts/snap/libass/: PKGBUILD
scripts/snap/libwebp/: PKGBUILD
scripts/snap/mpv/: PKGBUILD
scripts/switch/: Dockerfile  Makefile  dkp-meson-scripts-1.0.1-3-any.pkg.tar.zst  dkp-meson-scripts-1.0.2-1-any.pkg.tar.zst  dkp-meson-scripts-1.1.0-1-any.pkg.tar.zst  dkp-toolchain-vars-1.0.3-2-any.pkg.tar.zst  dkp-toolchain-vars-1.0.4-1-any.pkg.tar.zst  hacBrewPack-3.05-1-any.pkg.tar.zst  switch-tools-1.13.0-1-x86_64.pkg.tar.zst
scripts/switch/curl/: PKGBUILD  switch-curl.patch
scripts/switch/dav1d/: PKGBUILD  dav1d.patch
scripts/switch/deko3d/: PKGBUILD
scripts/switch/ffmpeg/: PKGBUILD  ffmpeg-6.0.patch  ffmpeg-6.1.1.patch  ffmpeg-6.1.patch  ffmpeg-7.0.patch  protocol.patch
scripts/switch/hacbrewpack/: PKGBUILD  nostartupuser.patch
snap/: snapcraft.yaml
snap/gui/: switchfin.desktop
(+28 files in other folders)
